# python-bazel

./: .gitignore  WORKSPACE  bazel-bin  bazel-my_python_project  bazel-out  bazel-python-bazel-repo  bazel-testlogs  requirements.txt
app/: BUILD.bazel  main.py  my_app.py
src/python/libs/calculator/: BUILD.bazel
src/python/services/app/: BUILD.bazel  app.py
src/python/services/app2/: BUILD.bazel
