load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "my_app",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        "@my_deps//pypi__requests",
    ],
)

# Optional: Add this if you have test_main.py
py_test(
    name = "my_app_test",
    srcs = ["test_main.py"],
    deps = [
        ":my_app",
        "@my_deps//pypi__requests",
    ],
)

